--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -5,15 +5,22 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title=`The Dream Tour | ${frontmatter.title}`>
-	<div class="p-9">
-		<div
-			class="flex flex-col items-center justify-center rounded-lg bg-gray-50 p-10"
-		>
-			<h1 class="mb-5 text-4xl font-bold tracking-wide">
-				{frontmatter.title}
-			</h1>
-			<br />
-			<p><slot /></p>
-		</div>
-	</div>
+  <div class="p-9">
+    <div
+      class="mx-auto flex max-w-screen-lg flex-col items-center justify-center rounded-lg bg-gray-50 p-10"
+    >
+      <h1 class="mb-5 text-4xl font-bold tracking-wide">
+        {frontmatter.title}
+      </h1>
+      <br />
+      <p><slot /></p>
+      <a
+        class="my-4 inline-block rounded bg-dark_primary px-8 py-3 text-sm font-medium text-white transition hover:scale-110 hover:shadow-xl focus:outline-none focus:ring active:bg-indigo-500"
+        href={frontmatter.images}
+      >
+        אלבום תמונות
+      </a>
+      <img src={frontmatter.image} alt="image" />
+    </div>
+  </div>
 </Layout>
