--- a/src/pages/tours.astro
+++ b/src/pages/tours.astro
@@ -1,10 +1,21 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import CountryCard from "../components/CountryCard.astro";
+
+const countries = await Astro.glob("../pages/tour/*.md");
 ---
 
 <Layout title="The Dream Tour | Tours">
-	<div class="m-auto flex w-5/6 flex-wrap justify-center gap-5 p-6">
-		<CountryCard title="Country" text="hi" />
-	</div>
+  <div class="m-auto flex w-5/6 flex-wrap justify-center gap-5 p-6">
+    {
+      countries.map((country) => (
+        //@ts-ignore
+        <CountryCard
+          title={country.frontmatter.title}
+          link={country.url}
+          image={country.frontmatter.image}
+        />
+      ))
+    }
+  </div>
 </Layout>
