added reviews, improved stuff

--- a/src/components/CountryCard.astro
+++ b/src/components/CountryCard.astro
@@ -11,7 +11,7 @@ const { title, image, link } = Astro.props;
 <a
   href={link}
   style={`background-image: url(${image});`}
-  class={`aspect-square w-60 rounded-xl bg-gray-500  bg-cover bg-center bg-no-repeat text-center shadow-xl transition-all hover:shadow-2xl`}
+  class="js-show-on-scroll aspect-square w-60 rounded-xl bg-gray-500 bg-cover bg-center bg-no-repeat text-center shadow-xl transition-all hover:shadow-2xl"
 >
   <div
     class="w-full border bg-gray-100 bg-opacity-75 px-2 py-3 shadow backdrop-blur-lg"
