--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 <nav
-  class="sticky top-0 left-0 z-20 w-full bg-home px-2 py-2.5 text-black shadow-xl sm:px-4"
+  class="sticky left-0 top-0 z-20 w-full bg-home px-2 py-2.5 text-black shadow-xl sm:px-4"
 >
   <div class="container mx-auto flex flex-wrap items-center justify-between">
     <a href="#" class="flex items-center">
@@ -14,42 +14,12 @@
       >
     </a>
     <div class="flex gap-2 md:order-2">
-      <div class="hidden items-center gap-2 sm:flex md:hidden lg:flex">
-        <a
-          href="https://www.facebook.com/ilanit.kitzoni.photography"
-          role="button"
-        >
-          <!-- Facebook -->
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-7 w-7"
-            fill="currentColor"
-            style="color: #1877f2"
-            viewBox="0 0 24 24"
-          >
-            <path
-              d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
-            ></path>
-          </svg>
-        </a>
-        <a
-          href="https://www.instagram.com/ilanit.kitzoni.photography/"
-          role="button"
-        >
-          <!-- Instagram -->
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-7 w-7"
-            fill="currentColor"
-            style="color: #c13584"
-            viewBox="0 0 24 24"
-          >
-            <path
-              d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
-            ></path>
-          </svg>
-        </a>
-      </div>
+      <a
+        class="inline-block rounded bg-primary px-8 py-3 text-sm font-medium text-white transition hover:scale-105 hover:shadow-xl focus:outline-none focus:ring active:bg-indigo-500"
+        href="#contact"
+      >
+        צור קשר
+      </a>
       <button
         data-collapse-toggle="navbar-sticky"
         type="button"
@@ -80,31 +50,24 @@
       >
         <li>
           <a
-            href="#"
+            href="/"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
             aria-current="page">בית</a
-          >
-        </li>
-        <li>
-          <a
-            href="#about"
-            class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
-            >קצת עליי</a
           >
         </li>
 
         <li>
           <a
-            href="#services"
+            href="#gallary"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
-            >שירותים</a
+            >גלריה</a
           >
         </li>
         <li>
           <a
-            href="#gallary"
+            href="/tours"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
-            >גלריה</a
+            >טיולים</a
           >
         </li>
         <li>
