--- a/src/pages/tours.astro
+++ b/src/pages/tours.astro
@@ -6,6 +6,7 @@ const countries = await Astro.glob("../pages/tour/*.md");
 ---
 
 <Layout title="The Dream Tour | Tours">
+  <h1 class="my-10 font-heebo text-6xl font-black lg:text-8xl">טיולים</h1>
   <div class="m-auto flex w-5/6 flex-wrap justify-center gap-5 p-6">
     {
       countries.map((country) => (
