--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -79,8 +79,8 @@ const services = [
       {
         services.map((service) => (
         <div
-        class=" w-full js-show-on-scroll max-w-full flex-shrink px-4 sm:w-1/2 lg:w-1/3 lg:px-6"
-        
+        class=" w-full  max-w-full flex-shrink px-4 sm:w-1/2 lg:w-1/3 lg:px-6"
+        data-aos="fade-up"
         style="visibility: visible;"
       >
         <!-- service block -->
