in the middle of inserting text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Sep from "../components/Sep.astro";
 import Features from "../components/Features.astro";
 import Devider from "../components/Devider.astro";
+import Step from "../components/Step.astro";
 ---
 
 <Layout title="The Dream Tour">
@@ -146,7 +147,36 @@ import Devider from "../components/Devider.astro";
         <h2 class="py-4 text-center font-heebo text-6xl font-bold xl:text-8xl">
           אז... איך זה עובד?
         </h2>
-        <div class="divide-y divide-gray-700"></div>
+        <div class="divide-y divide-gray-700">
+          <Step title="שיחת פגישה" num="ראשון">
+            נדבר על התכנונים לטיול. בזמן השיחה, אני אשאל אותכם לגבי מה אתם
+            מעדיפים והציפיות בזמן הטיול, כולל תקציב, פעילויות מועדפות והאורך
+            הטיול. זה יעזור לי ליצור תוכנית מותאמת לכם שמתאים לצרכים והציפיות
+            שלכם
+          </Step>
+          <Step num="שני" title="תכנון הטיול">
+            אחרי שאבין את העדיפויות שלכם, אני יתחיל את החיפוש שלי כדי לתכנן לכם
+            את הטיול. אני אחפש מקומות לינה, טיסות, פעילויות, ואטרקציות שמתאימים
+            לעדיפות והתקציב שלכם. המטרה שלי הוא ליצור מסלול שכולל את כל המקומות
+            שבהם תרצו לבקר ושמתאים לציר הזמן שלכם.
+          </Step>
+          <Step num="שלישי" title="">
+            לאחר שאסיים את תכנית הטיול, אציג אותה בפניכם לבדיקתכם. נדבר על כל
+            שינוי שתרצו לבצע, כמו התאמת מסלול הטיול, החלפת מלונות או החלפת
+            פעילויות. נעבור מספר תיקונים עד שתהיו מרוצים לחלוטין מהטיול.
+          </Step>
+          <Step num="רביעי" title="">
+            לאחר סיום תוכנית הטיול, אספק לכם מסלול מפורט הכולל את כל המידע
+            הדרוש, כמו לוחות זמנים של טיסות, הזמנות לבתי מלון והזמנת פעילויות.
+            ככה תדעו בדיוק למה לצפות ומתי, ותוכלו להביט למסלול לאורך כל הטיול
+            שלכם כדי להישאר מאורגנים.
+          </Step>
+          <Step num="חמישי" title="">
+            לבסוף, אני אהיה זמינה עבורכם לאורך כל הטיול למקרה שיש לכם שאלות או
+            חששות. אני אהיה שם כדי לספק סיוע והכוונה בכל פעם שתזדקקו לכך, כדי
+            להבטיח שהטיול שלכם יעבור בצורה חלקה ככל האפשר.
+          </Step>
+        </div>
       </div>
     </section>
   </main>
