--- a/src/components/Step.astro
+++ b/src/components/Step.astro
@@ -1,34 +1,24 @@
 ---
-const { dir, title, num } = Astro.props;
+const { title, icon, fadeDir } = Astro.props;
 ---
 
-<div
-  data-aos={`fade-${dir}`}
-  data-aos-delay="700"
-  class="mx-auto grid grid-cols-4 justify-center space-y-8 p-8 lg:space-y-0"
->
-  <div class="col-span-full flex items-center justify-center lg:col-span-1">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 512 512"
-      fill="currentColor"
-      class="h-16 w-16"
-    >
-      <path
-        d="M412.284,294.37l-12.5,15.642c-8.354,10.454-50.027,64.208-50.027,95.883,0,36.451,28.049,66.105,62.526,66.105s62.527-29.654,62.527-66.105c0-31.675-41.673-85.429-50.028-95.883Zm0,145.63c-16.832,0-30.526-15.3-30.526-34.105,0-11.662,15.485-37.883,30.531-59.2,15.043,21.3,30.522,47.509,30.522,59.2C442.811,424.7,429.116,440,412.284,440Z"
-      ></path>
-      <path
-        d="M122.669,51.492,96.133,124.4,30.092,97.205,17.908,126.8l67.271,27.7L26.9,314.606a48.056,48.056,0,0,0,28.689,61.523l184.719,67.232a48,48,0,0,0,61.523-28.688L397.6,151.56Zm149.1,352.236a16,16,0,0,1-20.508,9.563L66.537,346.059a16,16,0,0,1-9.563-20.507L73.553,280H316.8ZM85.2,248l29.594-81.311,36.333,14.961a32.644,32.644,0,1,0,11.236-29.98l-36.615-15.077,16.046-44.085,214.79,78.177L328,249.219V248Z"
-      ></path>
-    </svg>
-  </div>
-  <div
-    class="col-span-full flex max-w-3xl flex-col justify-center text-center lg:col-span-3 lg:text-left"
-  >
-    <span class="text-xs uppercase tracking-wider dark:text-violet-400"
-      >צעד {num}</span
-    >
-    <span class="text-xl font-bold md:text-2xl">{title}</span>
-    <span class="mt-4 dark:bg-gray-800 dark:text-gray-300"><slot /></span>
-  </div>
-</div>
+<li>
+	<span
+		class="absolute -right-5 flex h-8 w-8 items-center justify-center rounded-full bg-lime-200 ring-4 ring-lime-50"
+	>
+		<i class={icon}></i>
+	</span>
+	<div
+		class="mb-10 mr-6"
+		data-aos={`fade-${fadeDir}`}
+		data-aos-duration="1000"
+		data-aos-delay="400"
+	>
+		<h3 class="mb-1 flex items-center text-2xl font-bold text-gray-900">
+			{title}
+		</h3>
+		<p class="mb-4 text-right text-xl font-normal text-gray-800">
+			<slot />
+		</p>
+	</div>
+</li>
