--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,29 +43,26 @@
           class="flex flex-wrap justify-center gap-6 md:gap-8 lg:justify-end lg:gap-12"
         >
           <li>
-            <a
-              class="text-gray-700 transition hover:text-gray-700/75"
-              href="#about"
-            >
-              עלינו
+            <a class="text-gray-700 transition hover:text-gray-700/75" href="/">
+              בית
             </a>
           </li>
 
           <li>
             <a
               class="text-gray-700 transition hover:text-gray-700/75"
-              href="#reviews"
+              href="gallary"
             >
-              חוות דעת
+              גלריה
             </a>
           </li>
 
           <li>
             <a
               class="text-gray-700 transition hover:text-gray-700/75"
-              href="#features"
+              href="tours"
             >
-              מה מיוחד בנו
+              טיולים
             </a>
           </li>
 
