fixed navbar links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,7 +43,10 @@
           class="flex flex-wrap justify-center gap-6 md:gap-8 lg:justify-end lg:gap-12"
         >
           <li>
-            <a class="text-gray-700 transition hover:text-gray-700/75" href="/">
+            <a
+              class="text-gray-700 transition hover:text-gray-700/75"
+              href="/daniela"
+            >
               בית
             </a>
           </li>
@@ -51,7 +54,7 @@
           <li>
             <a
               class="text-gray-700 transition hover:text-gray-700/75"
-              href="gallary"
+              href="/daniela/gallary"
             >
               גלריה
             </a>
@@ -60,7 +63,7 @@
           <li>
             <a
               class="text-gray-700 transition hover:text-gray-700/75"
-              href="tours"
+              href="/daniela/tours"
             >
               טיולים
             </a>
