--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -50,7 +50,7 @@
       >
         <li>
           <a
-            href="/"
+            href="/daniela"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
             aria-current="page">בית</a
           >
@@ -58,14 +58,14 @@
 
         <li>
           <a
-            href="gallary"
+            href="/daniela/gallary"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
             >גלריה</a
           >
         </li>
         <li>
           <a
-            href="tours"
+            href="/daniela/tours"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
             >טיולים</a
           >
